<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tools"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAssistant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assistant"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnDrawing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawing_analysis"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnMachines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machines"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnMaterials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/materials" />

</LinearLayout>